--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
       "prettier --write ./src",
-      "eslint --cache --fix",
-      "git add"
+      "eslint --cache --fix"
     ]
   },
   "config": {
